--- a/css/sass/components/_forms.scss
+++ b/css/sass/components/_forms.scss
@@ -1,99 +1,175 @@
+input {
+  &:focus::placeholder {
+    opacity: 0;
+    transform: $sm-transition;
+  }
+}
 .main-inp {
- position: relative;
- border: none;
- border-radius: 12px;
- -webkit-border-radius: 12px;
- -moz-border-radius: 12px;
- -ms-border-radius: 12px;
- -o-border-radius: 12px;
- overflow: hidden;
- width: 100%;
- .icon
-{
-     font-size: 16px;
-     position: absolute;
-     right: 1rem;
-     top: 50%;
-     transform: translateY(-50%);
-     color: $mian-text-color;
-     -webkit-transform: translateY(-50%);
-     -moz-transform: translateY(-50%);
-     -ms-transform: translateY(-50%);
-     -o-transform: translateY(-50%);
-    }
-    input {
-     width: 100%;
-     border: none !important;
-     outline: none !important;
-     box-shadow: none !important;
-     padding: 1rem 1rem;
-     padding-right: calc(1rem + 15px + 0.5rem);
-     &::placeholder {
+  position: relative;
+  border: none;
+  border-radius: 12px;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  -ms-border-radius: 12px;
+  -o-border-radius: 12px;
+  overflow: hidden;
+  width: 100%;
+  .icon {
+    font-size: 16px;
+    position: absolute;
+    right: 1rem;
+    top: 50%;
+    transform: translateY(-50%);
+    color: $mian-text-color;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+  }
+  input {
+    width: 100%;
+    border: none !important;
+    outline: none !important;
+    box-shadow: none !important;
+    padding: 1rem 1rem;
+    padding-right: calc(1rem + 15px + 0.5rem);
+    &::placeholder {
       color: $mian-text-color;
-     }
     }
+  }
 }
 .inp-check {
- position: relative;
- box-shadow: 0 0 6px 0 #00000031;
- margin-right:3px ;
- margin-left:3px ;
- &::before {
-  content: "";
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transition: $sm-transition;
-  transform: translate(-50%,-50%);
-  -webkit-transform: translate(-50%,-50%);
-  -moz-transform: translate(-50%,-50%);
-  -ms-transform: translate(-50%,-50%);
-  -o-transform: translate(-50%,-50%);
-  background-color: white;
-  border: 2px solid $color-50;
-  border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-  width: 20px;
-  height: 20px;
-  -webkit-transition: $sm-transition;
-  -moz-transition: $sm-transition;
-  -ms-transition: $sm-transition;
-  -o-transition: $sm-transition;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  font-size: 16px;
-}
- &:checked::before{
-  content: "✓";
-  background-color: $mian-color;
-  border-color: $mian-color;
- }
+  position: relative;
+  box-shadow: 0 0 6px 0 #00000031;
+  margin-right: 3px;
+  margin-left: 3px;
+  &::before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transition: $sm-transition;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    background-color: white;
+    border: 2px solid $color-50;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    width: 20px;
+    height: 20px;
+    -webkit-transition: $sm-transition;
+    -moz-transition: $sm-transition;
+    -ms-transition: $sm-transition;
+    -o-transition: $sm-transition;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 16px;
+  }
+  &:checked::before {
+    content: "✓";
+    background-color: $mian-color;
+    border-color: $mian-color;
+  }
 }
 .main-textarea {
- width: 100%;
- resize: none;
- border-radius: 12px;
- -webkit-border-radius: 12px;
- -moz-border-radius: 12px;
- height: 200px;
- -ms-border-radius: 12px;
- -o-border-radius: 12px;
- box-shadow: 0px 3px 9px 0 #ffa4071f, 0px 0px 5px 0 #0000002b;
- outline: none !important;
- padding: 1rem 1rem;
- border: dashed 2px $color-50;
+  width: 100%;
+  resize: none;
+  border-radius: 12px;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  height: 200px;
+  -ms-border-radius: 12px;
+  -o-border-radius: 12px;
+  box-shadow: 0px 3px 9px 0 #ffa4071f, 0px 0px 5px 0 #0000002b;
+  outline: none !important;
+  padding: 1rem 1rem;
+  border: dashed 2px $color-50;
 }
 .bg-inp-check {
   background-color: white !important;
   &:checked {
-    background-color: #0ABAB5 !important;
-    border: 1px solid #0ABAB5;
+    background-color: #0abab5 !important;
+    border: 1px solid #0abab5;
     box-shadow: 0 0 0 0.25rem rgba(10, 186, 180, 0.274);
+  }
+}
+.main-select {
+  border-color: $main-border;
+  padding: 10px 15px 10px 40px;
+  border-radius: 10px;
+  font-size: 10px;
+  color: #666;
+  &.form-select {
+    background-position: left 11px center;
+    background-position-y: 53%;
+    background-size: 9px 10px;
+    &:focus {
+      border-color: $mian-color;
+      box-shadow: 0 0 0 0.25rem rgb(10 186 181 / 41%);
+    }
+  }
+}
 
+.search-bar {
+  border: 1px solid $main-border;
+  padding: 10px 20px;
+  border-radius: 11px;
+  @include flex-center;
+  justify-content: flex-start;
+  gap: 4px;
+  i,
+  svg {
+    font-size: 20px;
+    color: $light-text;
+  }
+  input {
+    color: $light-text;
+    display: flex;
+    flex-grow: 1;
+    border: none;
+    &::placeholder {
+      font-size: 11px;
+    }
+  }
+}
+
+.pagination {
+  .page-item:first-child,
+  .page-item:last-child {
+    a {
+      border: none;
+    }
+  }
+  .page-item:last-child {
+    a {
+      color: #010b14;
+    }
+  }
+  .page-item {
+    margin: 0 5px;
+    .page-link {
+      border-color: $yellow-color;
+      color: $black-color;
+      padding: 5px 8px;
+      &:hover {
+        background-color: #f1f3f5;
+      }
+      &.active {
+        background-color: $yellow-color;
+        border-color: $yellow-color;
+        color: $black-color;
+        &:hover {
+          border-color: $yellow-color !important;
+        }
+      }
+    }
   }
 }
