--- a/css/sass/components/_headings.scss
+++ b/css/sass/components/_headings.scss
@@ -1,9 +1,111 @@
 .lg-title {
- color: $mian-color;
- font-weight: bold;
+  color: $mian-color;
+  font-weight: bold;
 }
 .md-title {
- color: $mian-color;
- font-size: 30px;
- font-weight: bold;
+  color: $mian-color;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.categories-box {
+  border: 1px solid $main-border;
+  padding: 15px;
+  border-radius: 11px;
+  box-shadow: 0 0 5px 0 #00000017;
+  .categories-name {
+    margin-bottom: 0px;
+    a {
+      margin-bottom: 15px;
+      @include flex-between;
+      color: #444;
+      font-size: 13px;
+      i,
+      svg {
+        color: $light-text;
+        font-size: 12px;
+        transition: $sm-transition;
+      }
+      &[aria-expanded="false"] {
+        i,
+        svg {
+          transform: rotate(-90deg);
+        }
+      }
+    }
+  }
+  .collapse {
+    &:not(:last-child) {
+      margin-bottom: 15px;
+      padding-bottom: 10px;
+      border-bottom: 1px solid $main-border;
+    }
+    .sections {
+      li {
+        padding: 5px 5px;
+        label {
+          color: #444;
+          font-size: 13px;
+        }
+      }
+    }
+  }
+}
+
+.box-department {
+  position: relative;
+  // min-height: 270px;
+  height: 270px;
+  border-radius: 16px;
+  overflow: hidden;
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(
+      to bottom,
+      rgb(255 255 255 / 28%),
+      rgb(206 207 207 / 9%),
+      rgb(255 255 255 / 19%),
+      rgba(0, 0, 0, 0.4784313725),
+      rgba(0, 0, 0, 0.768627451)
+    );
+  }
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: $main-transition;
+  }
+  .added {
+    position: absolute;
+    top: 10;
+    left: 10px;
+    background-color: $alt-color;
+    color: $black-color;
+    padding: 4px 16px;
+    border-radius: 6px;
+    font-size: 11px;
+    font-weight: 600;
+    z-index: 2;
+  }
+  .name {
+    @include center-position;
+    top: 87%;
+    z-index: 2;
+    color: $white-color;
+    font-size: 16px;
+    font-weight: 300;
+    @include minWidth(lg) {
+      font-size: 18px;
+    }
+  }
+  &:hover {
+    img {
+      transform: scale(1.1) rotate(2deg);
+    }
+  }
 }
