--- a/css/sass/components/_boxes.scss
+++ b/css/sass/components/_boxes.scss
@@ -310,7 +310,7 @@
   .img-holder {
     border-radius: 16px;
     width: 100%;
-    height: 45%;
+    height: 130px;
     img {
       border-radius: 16px 16px 0px 0px;
       @include full-w-h;
