--- a/css/main.css
+++ b/css/main.css
@@ -508,7 +508,7 @@
 .box-services .img-holder {
   border-radius: 16px;
   width: 100%;
-  height: 45%;
+  height: 130px;
 }
 .box-services .img-holder img {
   border-radius: 16px 16px 0px 0px;
