--- a/css/sass/components/_boxes.scss
+++ b/css/sass/components/_boxes.scss
@@ -338,17 +338,140 @@
     }
     .more-info {
       @include flex-between;
-      .mony, .location {
-        i,svg {
+      .mony,
+      .location {
+        i,
+        svg {
           color: $pink-color;
           font-size: 10px;
           margin-left: 5px;
         }
         span {
-          font-size: 11px;
+          font-size: 10px;
           color: #333;
         }
       }
+    }
+  }
+}
+
+.box-chat {
+  background-color: #e5f3f4;
+  padding: 15px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  .head-box {
+    @include flex-between;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+    .user {
+      @include flex-center;
+      gap: 7px;
+      img {
+        @include circle(40px, 40px);
+      }
+      p {
+        margin-bottom: 0;
+        font-weight: 600;
+        font-size: 15px;
+      }
+    }
+    .date {
+      @include flex-center;
+      gap: 7px;
+      span {
+        color: #777;
+        font-weight: 400;
+        font-size: 13px;
+      }
+      .circle {
+        color: #d1d1d1;
+      }
+    }
+  }
+  .status {
+    color: $mian-color;
+    font-size: 15px;
+    font-weight: 600;
+    margin-bottom: 5px;
+  }
+  .massage {
+    color: #555;
+    font-size: 13px;
+    margin-bottom: 0;
+  }
+}
+
+.chatting-box {
+  padding: 1rem;
+  background-color: $white-color;
+  border: 2px solid $mian-color;
+  border-radius: 12px;
+  .user-bar {
+    padding-bottom: 20px;
+    margin-bottom: 30px;
+    border-bottom: 2px solid $main-border;
+    @include flex-center;
+    justify-content: flex-start;
+    gap: 9px;
+    img {
+      @include circle(50px, 50px);
+    }
+    p {
+      margin-bottom: 0;
+      font-weight: 600;
+      font-size: 18px;
+    }
+  }
+  .chat-content {
+    &.speak {
+      margin-left: auto;
+      margin-right: 0;
+      .chat-head-info {
+        flex-direction: row-reverse;
+        .about-user {
+          flex-direction: row-reverse;
+        }
+      }
+      .message-content {
+        background-color: #eaeff4;
+        color: #444;
+      }
+    }
+    width: fit-content;
+    margin-bottom: 25px;
+    margin-right: auto;
+    .chat-head-info {
+      @include flex-between;
+      gap: 20px;
+      flex-wrap: wrap;
+      margin-bottom: 7px;
+      .about-user {
+        @include flex-center;
+        justify-content: flex-start;
+        gap: 7px;
+        img {
+          @include circle(30px, 30px);
+        }
+        p {
+          margin-bottom: 0;
+          font-weight: 600;
+          font-size: 13px;
+        }
+      }
+      p.time {
+        margin-bottom: 0;
+        font-size: 11px;
+        font-weight: 600;
+        color: #a2aab6;
+      }
+    }
+    .message-content {
+      background-color: $mian-color;
+      color: $white-color;
+      border-radius: 6px;
+      padding: 15px 12px;
+      font-size: 12px;
     }
   }
 }
