--- a/css/sass/components/_boxes.scss
+++ b/css/sass/components/_boxes.scss
@@ -475,3 +475,75 @@
     }
   }
 }
+
+.cart-box {
+  @include flex-between;
+  gap: 20px;
+  padding-bottom: 25px;
+  border-bottom: 2px solid $main-border;
+  margin-bottom: 30px;
+  .about-cart {
+    @include flex-center;
+    align-items: flex-start;
+    gap: 10px;
+    img {
+      width: 95px;
+      height: 90px;
+      border-radius: 15px;
+      object-fit: cover;
+    }
+    .cart-info {
+      .name {
+        font-weight: 600;
+        font-size: 17px;
+      }
+      .des {
+        font-size: 12px;
+        color: #555;
+        margin-bottom: 0;
+      }
+    }
+  }
+  .more-options {
+    width: 100%;
+    @include flex-center;
+    justify-content: space-around;
+    div {
+      text-align: center;
+      &.quantity {
+        span {
+          margin: 0 8px;
+          font-size: 15px;
+        }
+      }
+      p {
+        font-weight: 700;
+        font-size: 15px;
+        margin-bottom: 8px;
+      }
+      span {
+        font-weight: 600;
+        font-size: 13px;
+      }
+    }
+  }
+}
+.total-box {
+  width: 100%;
+  padding: 10px;
+  @include flex-center;
+  flex-direction: column;
+  gap: 10px;
+  div {
+    width: 100%;
+    @include flex-between;
+    span {
+      font-weight: 700;
+    }
+  }
+}
+.btns-holder-card {
+  @include flex-center;
+  gap: 10px;
+  margin: 15px 0;
+}
