--- a/css/main.css
+++ b/css/main.css
@@ -1628,3 +1628,15 @@ input:focus::placeholder {
   color: white;
   font-size: 20px;
 }
+
+.invoice-section .info-user .img {
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
