--- a/css/sass/pages/_globalPage.scss
+++ b/css/sass/pages/_globalPage.scss
@@ -39,4 +39,8 @@ input {
 .section {
   padding-top: calc(62px + 1rem) !important;
   padding-bottom: calc(65.5px + 1rem)  !important;
+  @media print {
+    padding-top: 1rem !important;
+    padding-bottom:1rem !important;
+  }
 }
