--- a/css/sass/components/_boxes.scss
+++ b/css/sass/components/_boxes.scss
@@ -571,3 +571,39 @@
   }
  }
 }
+
+.box-subject {
+  background-color: $white-color;
+  padding: 19px 9px;
+  border-bottom: 1px solid #eaeaea;
+  .title {
+    display: block;
+    color: $mian-color;
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 10px;
+  }
+  .icon-bar {
+    @include flex-center;
+    justify-content: flex-start;
+    gap: 15px;
+    margin-bottom: 8px;
+    div {
+      @include flex-center;
+      justify-content: flex-start;
+      gap: 5px;
+      i,svg {
+        color: #777777;
+        font-size: 11px;
+      }
+      span {
+        color: #777777;
+        font-size: 13px;
+      }
+    }
+  }
+  .des {
+    color: #545454;
+    font-size: 13px;
+  }
+}
