--- a/css/sass/variables/_colors.scss
+++ b/css/sass/variables/_colors.scss
@@ -15,4 +15,6 @@ $light-pink-color: #FFE4E4;
 $light-text: #8f8f8f;
 $gray-text: #a9a8a8;
 $main-border: #e9e9e9;
-
+$trouble-d: #ddd;
+$text-dark-light: #6b7280;
+$light-greey: #f9fafb;
