--- a/css/sass/components/_boxes.scss
+++ b/css/sass/components/_boxes.scss
@@ -607,3 +607,34 @@
     font-size: 13px;
   }
 }
+.box-add-offer{
+  .header-offer {
+    .img-user {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      -ms-border-radius: 50%;
+      -o-border-radius: 50%;
+      object-fit: cover;
+}
+.name {
+  color: #0d6efd !important;
+  font-weight: bold;
+}
+.info {
+  font-size: 13px;
+  color: #777777;
+}
+  }
+}
+
+.satrs {
+  .star {
+    color: #ddd;
+    &.active {
+      color: #FFC107;
+    }
+  }
+}
