--- a/css/sass/components/_dropdowns&Buttons.scss
+++ b/css/sass/components/_dropdowns&Buttons.scss
@@ -138,3 +138,24 @@
   padding: 0px 5px;
   line-height: 18.90px;
 }
+
+.wallet-tap {
+  border-bottom: none;
+  .nav-link {
+    @include flex-center;
+    flex-grow: 1;
+    gap: 4px;
+    padding: 16px 15px;
+    font-size: 15px;
+    border: none !important;
+    box-shadow: none !important;
+    margin: 0 !important;
+    border-radius: 0 !important;
+    color: #314459 !important;
+    background-color: #f0f0f0;
+    i, svg {
+      color: #314459 !important;
+      font-size: 14px;
+    }
+  }
+}
