--- a/css/main.css
+++ b/css/main.css
@@ -1203,6 +1203,56 @@
   color: #FFC107;
 }
 
+.notifications-list > li .notification_holder {
+  background-color: white;
+  font-size: 15px;
+  z-index: 1;
+  position: relative;
+  border-style: none none none;
+  border-radius: 2px;
+  border-bottom: 1px solid #eee;
+  padding: 14px 0;
+}
+.notifications-list > li .notification_holder .notification_text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.notifications-list > li .notification_holder .notification_text .icon-alert {
+  font-size: 40px;
+  color: #DAC8FF;
+}
+.notifications-list > li .notification_holder .notification_text .image_holder {
+  width: 70px;
+  height: 100%;
+}
+.notifications-list > li .notification_holder .notification_text .image_holder > img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+.notifications-list > li .notification_holder .notification_text .date-notification {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  font-size: 11px;
+  color: #bdbcbc;
+  gap: 5px;
+}
+.notifications-list > li .notification_holder .notification_text .content {
+  color: #010B14;
+}
+
 input:focus::-webkit-input-placeholder {
   opacity: 0;
   -webkit-transform: 0.3s;
