--- a/css/sass/components/_headings.scss
+++ b/css/sass/components/_headings.scss
@@ -1,9 +1,9 @@
 .lg-title {
-  color: $mian-color;
+  color: $main-color;
   font-weight: bold;
 }
 .md-title {
-  color: $mian-color;
+  color: $main-color;
   font-size: 30px;
   font-weight: bold;
 }
