--- a/css/sass/pages/_login.scss
+++ b/css/sass/pages/_login.scss
@@ -1,7 +1,7 @@
 .login-section {
   .main-inp {
     position: relative;
-    border: 2px solid $mian-color !important;
+    border: 2px solid $main-color !important;
     .icon{
       color: $color-50 !important;
 }
