--- a/css/sass/components/_boxes.scss
+++ b/css/sass/components/_boxes.scss
@@ -158,7 +158,7 @@
 .box-border {
   padding: 1rem;
   background-color: white;
-  border: 2px solid $mian-color;
+  border: 2px solid $main-color;
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -328,7 +328,7 @@
     border: 2px solid $main-border;
     box-shadow: 0 0 5px 0 #00000017;
     .name {
-      color: $mian-color;
+      color: $main-color;
       font-size: 17px;
     }
     .des {
@@ -390,7 +390,7 @@
     }
   }
   .status {
-    color: $mian-color;
+    color: $main-color;
     font-size: 15px;
     font-weight: 600;
     margin-bottom: 5px;
@@ -405,7 +405,7 @@
 .chatting-box {
   padding: 1rem;
   background-color: $white-color;
-  border: 2px solid $mian-color;
+  border: 2px solid $main-color;
   border-radius: 12px;
   .user-bar {
     padding-bottom: 20px;
@@ -467,7 +467,7 @@
       }
     }
     .message-content {
-      background-color: $mian-color;
+      background-color: $main-color;
       color: $white-color;
       border-radius: 6px;
       padding: 15px 12px;
@@ -549,7 +549,7 @@
 }
 
 .main-table-border {
- border: 2px solid $mian-color !important;
+ border: 2px solid $main-color !important;
  border-radius: 15px !important;
  -webkit-border-radius: 15px !important;
  -moz-border-radius: 15px !important;
@@ -578,7 +578,7 @@
   border-bottom: 1px solid #eaeaea;
   .title {
     display: block;
-    color: $mian-color;
+    color: $main-color;
     font-size: 16px;
     font-weight: 700;
     margin-bottom: 10px;
@@ -679,5 +679,55 @@
               }
           }
       }
+  }
+}
+
+// box tickets
+.box-tickets {
+  .ticket {
+    background-color: white;
+    display: flex;
+    padding: 11px 20px;
+    align-items: center;
+    border: 2px solid $main-color;
+    border-radius: 25px;
+      flex-direction: column;
+      .header-box {
+        position: relative;
+        padding-bottom: 11px;
+        .date {
+            display: flex;
+            align-items: center;
+            font-size: 13px;
+            letter-spacing: 0px;
+            font-weight: bold;
+            justify-content: center;
+            color: $main-color;
+          i,
+          svg {
+            margin: 0 7px;
+          }
+        }
+        &::before {
+          content: "";
+          position: absolute;
+          background-color: $main-color;
+          width: 100%;
+          opacity: 0.5;
+          border-radius:50px ;
+          left: 0;
+          height: 3px;
+          top: 100%;
+          -webkit-border-radius:50px ;
+          -moz-border-radius:50px ;
+          -ms-border-radius:50px ;
+          -o-border-radius:50px ;
+}
+      }
+    .text {
+      font-size: 14px;
+      color: #666;
+        margin:11px 0;
+    }
   }
 }
