--- a/css/sass/components/_dropdowns&Buttons.scss
+++ b/css/sass/components/_dropdowns&Buttons.scss
@@ -1,6 +1,34 @@
+.text-badge {
+  color: white !important;
+  background-color: $main-color;
+  padding: 0.5rem 1rem;
+  border-radius: 9px;
+  -webkit-border-radius: 9px;
+  -moz-border-radius: 9px;
+  outline: 0 !important;
+  -ms-border-radius: 9px;
+  -o-border-radius: 9px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  width: fit-content;
+  &.badge-yellow {
+    background-color: $yellow-color !important;
+    color: $mian-text-color !important;
+  }
+  &.badge-light-grey {
+    background-color: $light-grey-color !important;
+    color: $mian-text-color !important;
+  }
+  &.badge-alt {
+    background-color: $alt-color !important;
+    color: $white-color !important;
+  }
+}
 .main-btn {
   color: white !important;
-  background-color: $mian-color;
+  background-color: $main-color;
   padding: 0.5rem 1rem;
   border-radius: 9px;
   -webkit-border-radius: 9px;
@@ -107,7 +135,7 @@
     box-shadow: 0px 4px 12px 0 #9d9d9da3;
     transition: $sm-transition;
     &:hover {
-      background-color: $mian-color;
+      background-color: $main-color;
     }
   }
 }
@@ -126,7 +154,7 @@
   background-color: transparent !important;
   &.active {
     background-color: $light-mian-color2 !important;
-    color: $mian-color !important;
+    color: $main-color !important;
   }
 }
 
