--- a/css/sass/pages/_main.scss
+++ b/css/sass/pages/_main.scss
@@ -80,7 +80,7 @@
         .item {
           padding: 0 0.8rem;
           text-align: center;
-          color: $mian-color;
+          color: $main-color;
           display: flex;
           align-items: center;
           flex-direction: column;
@@ -218,3 +218,39 @@
   }
 }
 // End how-order-section
+// Start artical-section
+.artical-section {
+  .box-text {
+      width: 100%;
+      background-color: white;
+      border-radius: 6px;
+      border: 1px solid $main-color;
+      padding: 15px;
+      .image-holder {
+          height: 250px;
+          width: 50%;
+          margin: 0 auto 30px;
+          height: 250px;
+    width: 500px;
+    max-width: 100%;
+    margin: 0 auto 30px;
+          img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+          }
+        }
+      h1 {
+          color: $main-color;
+          font-weight: 600;
+          font-size: 20px;
+          margin-bottom: 13px;
+          margin-top: 0;
+          p {
+              color: #fff;
+              font-size: 16px;
+          }
+      }
+  }
+}
+// End artical-section
