--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,10 @@
   white-space: nowrap;
 }
 
+.green-color {
+  color: #3bc100;
+}
+
 .text-badge {
   color: white !important;
   background-color: #0ABAB5;
@@ -335,7 +339,8 @@
   padding-top: 0px !important;
   padding-bottom: 0px !important;
 }
-.btn-close.transaction i, .btn-close.transaction svg {
+.btn-close.transaction i,
+.btn-close.transaction svg {
   font-size: 18px;
 }
 .btn-close.transaction span {
@@ -343,6 +348,46 @@
 }
 .btn-close.transaction:focus {
   box-shadow: none !important;
+}
+
+.btn-profile {
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  background-color: #fff;
+  color: #fff;
+  transition: all 0.3s ease;
+  padding: 7px 10px;
+  font-size: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+.btn-profile.w-lg {
+  width: 100% !important;
+}
+.btn-profile:hover {
+  color: #0ABAB5;
+  border: 1px solid #0ABAB5;
+}
+.btn-profile::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0%;
+  width: 100%;
+  height: 180%;
+  z-index: -1;
+  background-color: #0ABAB5;
+  transition: all 0.4s ease;
+  border-radius: 0 0 50% 50%;
+}
+.btn-profile:hover::before {
+  height: 0%;
 }
 
 .lg-title {
@@ -1148,6 +1193,82 @@
   margin: 11px 0;
 }
 
+.curator-box {
+  text-align: center;
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 8px;
+  transition: 0.4s;
+  box-shadow: 0 8px 16px 0 rgba(10, 14, 29, 0.01), 0 8px 64px 0 rgba(119, 119, 119, 0.02);
+  border: 1px solid #f4f4f4;
+}
+.curator-box:hover {
+  box-shadow: 0 40px 21px rgba(187, 193, 195, 0.35);
+  background: #f2fffb;
+}
+.curator-box .img-holder {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 12px #f4f4f4;
+  max-width: 100%;
+  margin: 0px auto;
+}
+.curator-box .img-holder img {
+  width: 100%;
+  height: 100%;
+  padding: 6px;
+  border-radius: 50%;
+}
+.curator-box .name a {
+  color: #333333;
+  font-size: 13px;
+}
+.curator-box .name i, .curator-box .name svg {
+  cursor: pointer;
+}
+.curator-box .name i.checked, .curator-box .name svg.checked {
+  font-size: 11px;
+  color: #1877f2;
+}
+.curator-box .name i.status, .curator-box .name svg.status {
+  font-size: 10px;
+  color: #ddd;
+}
+.curator-box .name i.status.active, .curator-box .name svg.status.active {
+  color: #3bc100;
+}
+.curator-box .curator-info {
+  margin-bottom: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+.curator-box .curator-info div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2px;
+}
+.curator-box .curator-info div i, .curator-box .curator-info div svg {
+  font-size: 10px;
+  color: #979797;
+}
+.curator-box .curator-info div span {
+  color: #919191;
+  font-size: 12px;
+}
+.curator-box .starts i, .curator-box .starts svg {
+  font-size: 11px;
+  margin-bottom: 10px;
+  color: #e0e0e0;
+}
+.curator-box .starts i.gold, .curator-box .starts svg.gold {
+  color: #ffa200;
+}
+
 input:focus::-moz-placeholder {
   opacity: 0;
   transform: 0.3s;
@@ -1256,7 +1377,10 @@ input:focus::placeholder {
 .inp-check:checked::before {
   content: "✓";
   background-color: #0ABAB5;
-  border-color: #0ABAB5;
+  border-color: #0ABAB5 !important;
+}
+.inp-check.form-check-input::before {
+  border: 1px solid rgba(0, 0, 0, 0.25);
 }
 
 .main-textarea {
@@ -1386,6 +1510,55 @@ input:focus::placeholder {
   padding: 16px 73px;
   height: 100%;
   opacity: 0;
+}
+
+.filter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-content: flex-start;
+  gap: 7px;
+  margin-right: 4px;
+}
+.filter .filter-label,
+.filter .icon-filter {
+  font-size: 16px;
+  color: #777;
+}
+
+.select-filter .selectize-input .item {
+  background: #0ABAB5 !important;
+  border: 1px solid #0ABAB5 !important;
+  margin: 3px !important;
+  padding: 2px 6px 2px 0px !important;
+  font-size: 14px !important;
+}
+.select-filter .selectize-input .item .remove {
+  margin-left: 0px !important;
+  margin-right: 6px !important;
+  border-left: none;
+  border-right: 1px solid #048f8b;
+  line-height: 14px;
+  font-size: 17px;
+}
+
+.star-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.star-bar .starts i, .star-bar .starts svg {
+  font-size: 21px;
+  color: #e0e0e0;
+  cursor: pointer;
+}
+.star-bar .starts i.gold, .star-bar .starts svg.gold {
+  color: #ffa200;
+}
+.star-bar .del i, .star-bar .del svg {
+  padding-left: 5px;
+  font-size: 21px;
+  color: #e0e0e0;
 }
 
 * {
