--- a/css/sass/components/_dropdowns&Buttons.scss
+++ b/css/sass/components/_dropdowns&Buttons.scss
@@ -208,7 +208,8 @@
     opacity: 1;
     padding-top: 0px !important;
     padding-bottom: 0px !important;
-    i, svg {
+    i,
+    svg {
       font-size: 18px;
     }
     span {
@@ -217,5 +218,41 @@
     &:focus {
       box-shadow: none !important;
     }
+  }
+}
+
+.btn-profile {
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  width: fit-content;
+  background-color: $white-color;
+  color: $white-color;
+  transition: all 0.3s ease;
+  padding: 7px 10px;
+  font-size: 13px;
+  @include flex-center;
+  gap: 5px;
+  &.w-lg {
+    width: 100% !important;
+  }
+  &:hover {
+    color: $main-color;
+    border: 1px solid $main-color;
+  }
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0%;
+    width: 100%;
+    height: 180%;
+    z-index: -1;
+    background-color: $main-color;
+    transition: all 0.4s ease;
+    border-radius: 0 0 50% 50%;
+  }
+  &:hover::before {
+    height: 0%;
   }
 }
